--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "dev:canon": "ts-node scripts/canonicalize.ts",
+    "build:canon": "tsc --project tsconfig.canon.json",
+    "start:canon": "node dist/canon/scripts/canonicalize.js",
+    "test": "vitest run"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -42,8 +46,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "commander": "^12.1.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
+    "fast-csv": "^5.0.1",
+    "fs-extra": "^11.2.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
@@ -53,6 +60,7 @@
     "react-hook-form": "^7.52.1",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.12.7",
+    "slugify": "^1.6.6",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -60,6 +68,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -71,7 +81,11 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.2"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.3.2",
+    "vitest": "^3.1.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
