--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "commander": "^12.1.0",
+    "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "fast-csv": "^5.0.1",
     "fs-extra": "^11.2.0",
     "input-otp": "^1.2.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
