--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fast-csv": "^5.0.1",
     "fs-extra": "^11.2.0",
     "input-otp": "^1.2.4",
+    "json-stable-stringify": "^1.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/json-stable-stringify": "^1.2.0",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
