Add ESLint configuration and TypeScript support
- Introduced .eslintignore to specify files and directories to be ignored by ESLint.
- Updated .eslintrc.cjs to include TypeScript support and additional plugins.
- Added TypeScript configuration files (tsconfig.json and tsconfig.node.json) for project structure and compilation settings.
- Updated package.json to include TypeScript ESLint dependencies.
- Enhanced tsconfig.canon.json to include test and tools directories for TypeScript compilation.

--- a/tsconfig.canon.json
+++ b/tsconfig.canon.json
@@ -33,7 +33,10 @@
   },
   "include": [
     "lib/**/*.ts",                   /* Include all TypeScript files in lib */
-    "scripts/**/*.ts"                /* Include all TypeScript files in scripts */
+    "scripts/**/*.ts",               /* Include all TypeScript files in scripts */
+    "test/**/*.ts",                  /* Include all TypeScript files in test */
+    "tools/**/*.ts",                 /* Include all TypeScript files in tools */
+    "canonicalize.protocol.ts"       /* Include protocol file in root */
   ],
   "exclude": [
     "node_modules",                  /* Exclude node_modules */
