--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:canon": "ts-node scripts/canonicalize.ts",
     "build:canon": "tsc --project tsconfig.canon.json",
     "start:canon": "node dist/canon/scripts/canonicalize.js",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -71,6 +72,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/fs-extra": "^11.0.4",
     "@types/json-stable-stringify": "^1.2.0",
     "@types/lodash": "^4.17.16",
@@ -87,6 +90,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "execa": "^9.5.2",
     "gh-pages": "^6.3.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
