Enhance data management and build process with new copy utility
- Introduced a new script `copy-data.js` to automate the copying of canonical contact data from the source to the public directory.
- Updated `package.json` scripts to include `predev` and modified `build` to ensure data is copied before development and during the build process.
- Added a custom Vite plugin to handle hot module reloading for the canonical data file, ensuring the latest data is always available during development.
- Revised `README.md` to document the new data management approach and the role of the `copy-data.js` script.
- Enhanced `contactDataService.ts` to utilize the dynamic base URL for data access, improving flexibility across environments.
- Implemented unit tests for the `copy-data.js` script to ensure reliability and error handling.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predev": "pnpm run copy:data",
     "dev": "vite",
-    "build": "vite build",
+    "build": "pnpm run copy:data && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
@@ -13,7 +14,8 @@
     "build:canon": "tsc --project tsconfig.canon.json",
     "start:canon": "node dist/canon/scripts/canonicalize.js",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "copy:data": "node scripts/copy-data.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
